  * Add hpijs-ppds to print-server task. These ppds are recommended ones for
    many HP printers.
  * Add hp-ppd, to cover a few other HP printers.
  * Add openprinting-ppds, supporting a lot of postscript printers.
  * Add kerneloops to dekstop tasks. Closes: #475398
  * Re-add r2034; xorg is in testing.

  [ Eddy Petri?or ]
  * added iceweasel-l10n-ro to the romanian-desktop task

 -- Jacobo Tarrio <jtarrio@debian.org>  Sun, 02 Mar 2008 23:57:54 +0000

tasksel (2.73) unstable; urgency=high

  * Revert r2034: "Remove discover1 and xresprobe from the desktop
    task. These are no longer used by xorg 1:7.3+10. Hallelujah!" until
    xorg is ready to go to testing and it shouldn't happen in time for
    Debian Installer Lenny Beta1.

  [ Translations of tasks ]
  * Arabic updated.

 -- Otavio Salvador <otavio@debian.org>  Thu, 14 Feb 2008 09:40:57 -0200

tasksel (2.72) unstable; urgency=medium

  [ Joey Hess ]
  * Add smartmontools to the file-server task.

  [ Translations of tasks ]
  * Portuguese updated.
  * Galician updated.
  * Dutch updated.
  * French updated.
  * Slovak updated.
  * Czech updated.
  * Russian updated.
  * Simplified Chinese updated.
  * Lithuanian updated.
  * Korean updated.
  * Brazilian Portuguese updated.

  [ Joey Hess ]
  * Switch grome-desktop from gnome-btdownload to transmission-gtk.
    Closes: #463844

  [ Otavio Salvador ]
  * Change laptop-detect from a dependency to a recommendation. It will be
    installed by d-i on specific architectures.
  * Change desktop test to avoid testing twice if dmidecode is executable.

 -- Joey Hess <joeyh@debian.org>  Wed, 13 Feb 2008 13:11:45 -0500

tasksel (2.71) unstable; urgency=low

  [ Kenshi Muto ]
  * japanese, japanese-desktop: Add me Maintainer field.
  * japanese-desktop: Replace ttf-kochi-* by current de-facto
    ttf-sazanami-*.
  * japanese: Remove language-env because it no longer helps UTF-8
    environment.
  * japanese-desktop: Add icedove and icedove-l10n-ja.